[metadata]
name = tefas-crawler
version = attr: tefas.__version__
author = Burak Yilmaz
author_email = burakyilmaz321@gmail.com
description = Crawl the public data from Tefas.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/burakyilmaz321/tefas-crawler
download_url = https://pypi.org/project/tefas-crawler/
license = MIT
classifier = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 1 - Planning

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests
    marshmallow
    pandas

[options.extras_require]
dev =
    pylint
    flake8
    black
    ipykernel
    ipython
    jupyter
    tox
    coverage
    pytest-cov
    tox-gh-actions
