[metadata]
name = tefas-crawler
version = attr: tefas.__version__
author = Burak Yilmaz
author_email = burakyilmaz321@gmail.com
description = Crawl the public data from Tefas.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/burakyilmaz321/tefas-crawler
download_url = https://pypi.org/project/tefas-crawler/
license = MIT
classifier = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Development Status :: 5 - Production/Stable

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests
    marshmallow
    pandas
    urllib3

[options.extras_require]
dev =
    pylint
    flake8
    black
    ipykernel
    ipython
    jupyter
    tox
    coverage
    pytest-cov
    tox-gh-actions
